Added Pl3xmap v3 support